--- a/layout-remake/index.html
+++ b/layout-remake/index.html
@@ -116,7 +116,76 @@
                 </a>
             </div>
         </div>
-
+        
+        <div class="popular-category-wrapper category">
+            <h3 class="category__title">
+                Хиты продаж
+            </h3>
+            <a href="#" class="category__all-link">
+                Все категории..
+            </a>
+        </div>
+        <div class="hits-wrapper">
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__price-wrapper">
+                    <p class="product-card__price-old">19999</p>
+                    <p class="product-card__price">9999</p>
+                </div>
+                <a class="product-card__buy-button" href="#">
+                    <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                </a>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__price-wrapper">
+                    <p class="product-card__price-old">19999</p>
+                    <p class="product-card__price">9999</p>
+                </div>
+                <a class="product-card__buy-button" href="#">
+                    <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                </a>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__price-wrapper">
+                    <p class="product-card__price-old">19999</p>
+                    <p class="product-card__price">9999</p>
+                </div>
+                <a class="product-card__buy-button" href="#">
+                    <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                </a>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__control">
+                    
+                    <div class="product-card__price-wrapper">
+                        <p class="product-card__price-old">19999</p>
+                        <p class="product-card__price">9999</p>
+                    </div>
+                    <a class="product-card__buy-button" href="#">
+                        <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
