--- a/layout-remake/index.html
+++ b/layout-remake/index.html
@@ -125,64 +125,95 @@
                 Все категории..
             </a>
         </div>
-        <div class="hits-wrapper">
+        <div class="hits-wrapper">     
             <div class="product-card">
                 <p class="product-card__title">
                     Title
                 </p>
                 <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
                 <p class="product-card__specs">Specs</p>
-                <div class="product-card__price-wrapper">
-                    <p class="product-card__price-old">19999</p>
-                    <p class="product-card__price">9999</p>
-                </div>
-                <a class="product-card__buy-button" href="#">
-                    <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
-                </a>
-            </div>
-            <div class="product-card">
-                <p class="product-card__title">
-                    Title
-                </p>
-                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
-                <p class="product-card__specs">Specs</p>
-                <div class="product-card__price-wrapper">
-                    <p class="product-card__price-old">19999</p>
-                    <p class="product-card__price">9999</p>
-                </div>
-                <a class="product-card__buy-button" href="#">
-                    <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
-                </a>
-            </div>
-            <div class="product-card">
-                <p class="product-card__title">
-                    Title
-                </p>
-                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
-                <p class="product-card__specs">Specs</p>
-                <div class="product-card__price-wrapper">
-                    <p class="product-card__price-old">19999</p>
-                    <p class="product-card__price">9999</p>
-                </div>
-                <a class="product-card__buy-button" href="#">
-                    <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
-                </a>
-            </div>
-            <div class="product-card">
-                <p class="product-card__title">
-                    Title
-                </p>
-                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
-                <p class="product-card__specs">Specs</p>
-                <div class="product-card__control">
-                    
+                <div class="product-card__wrapper">
                     <div class="product-card__price-wrapper">
                         <p class="product-card__price-old">19999</p>
                         <p class="product-card__price">9999</p>
                     </div>
-                    <a class="product-card__buy-button" href="#">
-                        <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
-                    </a>
+                    <div class="product-card__button-wrapper">
+                        <a class="product-card__buy-button" href="#">
+                            <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__title" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__wrapper">
+                    <div class="product-card__price-wrapper">
+                        <p class="product-card__price-old">19999</p>
+                        <p class="product-card__price">9999</p>
+                    </div>
+                    <div class="product-card__button-wrapper">
+                        <a class="product-card__buy-button" href="#">
+                            <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__image" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__wrapper">
+                    <div class="product-card__price-wrapper">
+                        <p class="product-card__price-old">19999</p>
+                        <p class="product-card__price">9999</p>
+                    </div>
+                    <div class="product-card__button-wrapper">
+                        <a class="product-card__buy-button" href="#">
+                            <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__image" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__wrapper">
+                    <div class="product-card__price-wrapper">
+                        <p class="product-card__price-old">19999</p>
+                        <p class="product-card__price">9999</p>
+                    </div>
+                    <div class="product-card__button-wrapper">
+                        <a class="product-card__buy-button" href="#">
+                            <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-card">
+                <p class="product-card__title">
+                    Title
+                </p>
+                <img class="product-card__image" src="./img/msi-gpu.jpg" alt="product">
+                <p class="product-card__specs">Specs</p>
+                <div class="product-card__wrapper">
+                    <div class="product-card__price-wrapper">
+                        <p class="product-card__price-old">19999</p>
+                        <p class="product-card__price">9999</p>
+                    </div>
+                    <div class="product-card__button-wrapper">
+                        <a class="product-card__buy-button" href="#">
+                            <img class="product-card__buy-image" src="./img/buy-button.svg" alt="buy-button">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
